# rust-python-analytics-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: architecture.md  python-to-rust-mental-model.md
examples/python/: send_events.py
migrations/: 0001_init.sql
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  queue.rs  state.rs
src/dto/: analytics.rs  auth.rs  event.rs  mod.rs
src/models/: event.rs  user.rs
src/repository/: event_repository.rs  user_repository.rs
src/routes/: analytics.rs  auth.rs  events.rs  health.rs  mod.rs
src/services/: analytics_service.rs  auth_service.rs  mod.rs
