[package]
name = "rust-python-analytics-api"
version = "0.1.0"
edition = "2021"
authors = ["OpenAI"]
description = "Production-grade analytics API in Rust for Python developers"

[lib]
name = "rust_python_analytics_api"
path = "src/lib.rs"

[[bin]]
name = "analytics-api"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
http = "1"
jsonwebtoken = "9"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1"
